AWS SDK for Java 1.11.1